# school-support-bot

./: .gitignore  Dockerfile  Dockerfile-no-avx  README.md  docker-compose.yml  pyproject.toml  requirements-no-avx.txt
bot/: .env.example  __main__.py  database.py  gsheets_connector.py  settings.py
bot/handlers/: __init__.py  admin.py  applications.py  cancel.py  cartridge.py  error.py  restrictions.py  start.py  tasks.py
bot/models/: task.py
bot/telegram_bot_calendar/: __init__.py  base.py  detailed.py  static.py
bot/utils/: inline_calendar.py  keyboards.py  log.py  users.py
